# distribution_and_volume_based_isolation_forest

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.TXT  README.TXT  README.md  Untitled.ipynb  data_gen_ML_03_06_2022.ipynb  data_generator.py  initial_exploration.ipynb  motivating_examples.ipynb  pac_rpad.ipynb  pyproject.toml  reproducing_results.ipynb  requirements-intel.txt  requirements.txt  session09_05_ffts_acceleration.ipynb
.github/workflows/: code_quality.yaml  security_check.yaml
archived/: Isolation_forest_helper_funcs.py  custom_dataset.py  pseudocode_pac_rpad.py
branch_and_bound/: BranchAndBoundSolver.py  BranchAndBoundSolver_hichem.py  patterns.py  patterns_hichem.py  run_bnb.ipynb
experiments/: comparison_pacrpad_if.ipynb  depth_vs_area_experiments.ipynb  if_on_different_distributions_03_06_2022.ipynb  minlp_pyomo_dataset_cardio.ipynb  minlp_pyomo_dataset_http.ipynb  minlp_pyomo_dataset_skin.ipynb  minlp_pyomo_dataset_skin_different_min_areas.ipynb  minlp_pyomo_dataset_smtp.ipynb  minlp_pyomo_dataset_smtp_model_tweaking.ipynb  model_benchmarks.ipynb
experiments/mlruns/0/: meta.yaml
experiments/mlruns/271883002980108978/: meta.yaml
experiments/mlruns/271883002980108978/059e4520c6ea496797467f1628f2e887/: meta.yaml
experiments/mlruns/271883002980108978/079399dc26f544b4b0b4958586028681/: meta.yaml
experiments/mlruns/271883002980108978/095dea5ed1b743d9b69d5f98181cdea6/: meta.yaml
experiments/mlruns/271883002980108978/0ce3a47267444872a960fdcbafedbd26/: meta.yaml
experiments/mlruns/271883002980108978/0de8766271bc45ccbf4850a5615f473b/: meta.yaml
experiments/mlruns/486716780144883832/: meta.yaml
implementation/: Isolation_forest_helper_funcs.py  custom_dataset.py  pac_rpad.py
minlp/: minlp_pyomo.ipynb
rare_pattern_detect/: if_based.py  minlp_based.py  minlp_pyomo.ipynb  pattern_space_utils.py  patterns.py  rare_pattern_detect.py
renyi_if/: renyi_if.py
renyi_isolation_forest/: README.TXT  depth_based_renyi_isolation_forest.py  pac_based_renyi_isolation_forest.py  pyproject.toml  script-test-installation.py
renyi_isolation_forest/renyi_isolation_forest/: depth_based_renyi_isolation_forest.py  pac_based_renyi_isolation_forest.py  utils.py
renyi_isolation_forest/renyi_isolation_forest.egg-info/: top_level.txt
renyi_isolation_forest/renyi_isolation_forest/renyi_isolation_forest.egg-info/: PKG-INFO  SOURCES.txt
schwelle_senke/: ACDC_Component_Cracks_2022.03.03-04(16).xlsx  data_analysis_schwelle_senke.ipynb  initial_exploration.ipynb  session09_05_ffts_acceleration.ipynb
src/: examples.py  script-test-installation.py
src/pac_dist_iforest/: __init__.py
src/renyi_isolation_forest/: depth_based_renyi_isolation_forest.py  pac_based_renyi_isolation_forest.py  utils.py
src/renyi_isolation_forest.egg-info/: PKG-INFO  SOURCES.txt
test/: tests_minlp_based.py  tests_rare_pattern_detect.ipynb  tests_rare_pattern_detect.py
tests/: test_pac_rpad.py  tests_draft.ipynb  tests_minlp_based.py  tests_rare_pattern_detect.py
(+637 files in other folders)
