[tool.poetry]
name = "pac-learning"
version = "0.1.0"
description = ""
authors = ["paul <paul.boes@porsche.digital>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scikit-learn = "1.0.0"
pyod = "1.0.0"
torch = "1.9.0"
rtdl = "0.0.13"
tensorflow-aarch64 = "2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
