[project]
name = "pac_dist_iforest"
version = "1.0.0"
description = "Anomaly Detection Python Package"

authors = [
    { name="Hichem Dhouib", email="hichem.dhouib@porsche.digital" },
    { name="Paul Boes", email="paul.boes@porsche.digital" }
]

readme = "README.md"

[project.urls]
"Homepage" = "https://gitlab.com/porsche-digital/industry-solutions/research/pac-learning/-/tree/linting/"
"Bug Tracker" = "https://gitlab.com/porsche-digital/industry-solutions/research/pac-learning/-/issues"

[project.optional-dependencies]
dev = [
    "contourpy ~=1.1.0",
    "cycler ~=0.11.0",
    "fonttools ~=4.40.0",
    "importlib-resources ~=5.12.0",
    "joblib ~=1.2.0",
    "kiwisolver ~=1.4.4",
    "matplotlib ~=3.7.1",
    "numpy ~=1.24.3",
    "packaging ~=23.1",
    "pandas ~=2.0.2",
    "Pillow ~=9.5.0",
    "pyparsing ~=3.0.9",
    "python-dateutil ~=2.8.2",
    "pytz ~=2023.3",
    "scikit-learn ~=1.2.2",
    "scipy ~=1.10.1",
    "seaborn ~=0.12.2",
    "six ~=1.16.0",
    "threadpoolctl ~=3.1.0",
    "tzdata ~=2023.3",
    "zipp ~=3.15.0",
]

[tool.pydocstyle]
max-line-length = 88
disable = [
    "D400", # (First line should end with a period)
    "D107", # (Missing docstring in __init__)
    "D212", # (Multi-line docstring summary should start at the first line)
    "D203", # (1 blank line required before class docstring)
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # ()
    "E0611", # ()
]
ignored-modules = [
    "scipy.special"
]